--- a/docs/site/_includes/navbar.html
+++ b/docs/site/_includes/navbar.html
@@ -3,4 +3,12 @@
     <img src="{{site.baseurl}}/assets/logo-white.svg" height="36" class="d-inline-block" alt="Site logo" loading="lazy">
     <span class="pl-3">{{site.title}}</span>
   </a>
+  <div class="btn-group btn-group-sm btn-group-toggle theme-switch" data-toggle="buttons">
+    <label class="btn btn-light active">
+      <input type="radio" name="theme" value="light" checked> Light
+    </label>
+    <label class="btn btn-secondary">
+      <input type="radio" name="theme" value="dark"> Dark
+    </label>
+  </div>
 </nav>
